home page updates

--- a/templates/WebApp/home.html
+++ b/templates/WebApp/home.html
@@ -47,19 +47,18 @@
             <!-- Begin Page Content -->
 
             <div class="align-items-center justify-content-between">
-                <div class="card" style="  background-color: black;opacity: 0.5;">
+                <div class="card">
                     <div>
-                    <img class="img-fluid" src="{% static '/images/hero.jpg' %}" style="height: 50vh;width: 100%;">
+                    <img class="img-fluid" src="{% static '/images/hero.jpg' %}" style="height: 50vh;width: 100%;
+    object-fit: cover;">
                         <div class="layer">
                         </div>
                     <div class="card-img-overlay">
                         <div class="text-center text-white" style="height: 30vh;align-items: center;margin: 12vh;">
-                            <p style="font-size:2vw; font-family: monospace; text-shadow: black 0.1em 0.1em 0.2em;">This web application shows typical
-                                implementations of common user interface requirements
-                                in geospatial information delivery. </p>
-                             <p style="font-size:1vw; font-family: monospace; text-shadow: black 0.1em 0.1em 0.2em;">
-                             This template app is created and maintanined by the SERVIR Science Coordination
-                                        office</p>
+                            <p style="font-size:2vw; font-family: Arial; text-shadow: black 0.1em 0.1em 0.2em;">SERVIR Geospatial Application Template 2022    </p>
+                             <p style="font-size:1vw; font-family: Arial; text-shadow: black 0.1em 0.1em 0.2em;">
+                             This web application shows simple implementation of common user interface elements in geospatial information delivery. It is intended to be used as a starting point for building new applications for specialized use cases.
+This template app is created and maintanined by the SERVIR Science Coordination office</p>
 
                         </div>
                     </div>
@@ -76,7 +75,7 @@
 
                 <!-- Page Heading -->
                 <div class="row">
-                    <div class="app-card col-lg-3 mb-4" style="height: 50vh">
+                    <div class="app-card col-lg-3 mb-4" style="height: 30vh">
                         <br>
                         <!-- Illustrations -->
                         <div class="card shadow mb-4 h-100 img-thumbnail">
@@ -91,7 +90,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="app-card col-lg-3 mb-4" style="height: 50vh">
+                    <div class="app-card col-lg-3 mb-4" style="height: 30vh">
                         <br>
                         <!-- Illustrations -->
                         <div class="card shadow mb-4  h-100 img-thumbnail">
@@ -107,7 +106,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="app-card col-lg-3 mb-4" style="height: 50vh">
+                    <div class="app-card col-lg-3 mb-4" style="height: 30vh">
                         <br>
                         <!-- Illustrations -->
                         <div class="card shadow mb-4  h-100 img-thumbnail">
@@ -124,7 +123,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="app-card col-lg-3 mb-4" style="height: 50vh">
+                    <div class="app-card col-lg-3 mb-4" style="height: 30vh">
                         <br>
                         <!-- Illustrations -->
                         <div class="card shadow mb-4  h-100 img-thumbnail">
@@ -143,7 +142,7 @@
                     </div>
 {#                </div>#}
 {#                <div class="row">#}
-                    <div class="app-card col-lg-3 mb-4" style="height: 50vh">
+                    <div class="app-card col-lg-3 mb-4" style="height: 30vh">
                         <br>
                         <!-- Illustrations -->
                         <div class="card shadow mb-4  h-100 img-thumbnail">
@@ -160,7 +159,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="app-card col-lg-3 mb-4" style="height: 50vh">
+                    <div class="app-card col-lg-3 mb-4" style="height: 30vh">
                         <br>
                         <!-- Illustrations -->
                         <div class="card shadow mb-4   h-100 img-thumbnail">
@@ -177,7 +176,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="app-card col-lg-3 mb-4" style="height: 50vh">
+                    <div class="app-card col-lg-3 mb-4" style="height: 30vh">
                         <br>
                         <!-- Illustrations -->
                         <div class="card shadow mb-4   h-100 img-thumbnail">
