--- a/WebApp/static/css/map1.css
+++ b/WebApp/static/css/map1.css
@@ -10,6 +10,7 @@
   top:30px;
   z-index:20000;
 }
+
  #settings {
   position: absolute;
   top: 180px;
@@ -18,7 +19,14 @@
   z-index: 400;
  }
 
- /*#layer_manager{*/
+ #layer_manager {
+ width: 45vh;
+  position: absolute;
+  background: white;
+ top:12vh;
+  z-index: 400;
+  right: 3vh;
+ }
  /*position: relative;*/
  /*   display: flex;*/
  /*   justify-content: space-between;*/
