--- a/templates/WebApp/map_fixedsize.html
+++ b/templates/WebApp/map_fixedsize.html
@@ -37,97 +37,128 @@
     <link href="{% static '/css/basic.css' %}" rel="stylesheet">
 </head>
 <body id="page-top">
-    <div id="wrapper">
-{#        {% include "WebApp/sidebar.html" %}#}
-        <!-- Content Wrapper -->
-        <div id="content-wrapper" class="d-flex flex-column">
-            <!-- Main Content -->
-            <div id="content">
-                {% include "WebApp/topbar.html" %}
-                <div class="container-fluid">
-                    <div class="row">
-                        <!-- Area Chart -->
-                        <div class="col-xl-12 col-lg-12">
-                            <div class="card shadow mb-4">
-                                <!-- Card Header - Dropdown -->
-                                <div
-                                        class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-primary">Display WMS Content</h6>
-                                </div>
-                                <!-- Card Body -->
-                                <div class="card-body">
-                                    <link rel="stylesheet" href="{% static 'css/map1.css' %}">
+<div id="wrapper">
+    {#        {% include "WebApp/sidebar.html" %}#}
+    <!-- Content Wrapper -->
+    <div id="content-wrapper" class="d-flex flex-column">
+        <!-- Main Content -->
+        <div id="content">
+            {% include "WebApp/topbar.html" %}
+            <div class="container-fluid">
+                <div class="row">
+                    <!-- Area Chart -->
+                    <div class="col-xl-12 col-lg-12">
+                        <div class="card shadow mb-4">
+                            <!-- Card Header - Dropdown -->
+                            <div
+                                    class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                                <h6 class="m-0 font-weight-bold text-primary">Display WMS Content</h6>
+                            </div>
+                            <!-- Card Body -->
+                            <div class="card-body">
+                                <link rel="stylesheet" href="{% static 'css/map1.css' %}">
 
-                                    <div id="map"></div>
-{#                                    <button id="settings"><i class="fa fa-cog" aria-hidden="true"></i></button>#}
-                                    <div id="layer_manager" class="ml-5 mr-5 mt-3 d-flex justify-content-around">
-                                        <p>CHIRPS Layer
-                                            <input id="chirps" type="checkbox"/>
-                                        </p>
+                                <div id="map"></div>
+                                {#                                    <button id="settings"><i class="fa fa-cog" aria-hidden="true"></i></button>#}
 
-                                        <div id="opacitySlider_chirps">
-                                            <label>Opacity for CHIRPS:</label>
-                                             <input id="opacity_chirps" type="range" value="contrast" max="0.5" min="0" step="0.1"/>
+                                <div id="layer_manager" class="border border-dark rounded p-2">
+                                    <ul class="nav nav-tabs" id="myTab" role="tablist">
+                                        <li class="nav-item">
+                                            <a class="nav-link active" id="home-tab" data-toggle="tab"
+                                               href="#layers_tab" role="tab" aria-controls="home" aria-selected="true">Layers</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" id="profile-tab" data-toggle="tab" href="#basemaps_tab"
+                                               role="tab" aria-controls="profile" aria-selected="false">Basemaps</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" id="contact-tab" data-toggle="tab" href="#legends_tab"
+                                               role="tab" aria-controls="contact" aria-selected="false">Legends</a>
+                                        </li>
+                                    </ul>
+                                    <div class="tab-content" id="myTabContent">
+                                        <div class="tab-pane fade show active pt-5" id="layers_tab" role="tabpanel"
+                                             aria-labelledby="layers-tab">
+                                            <p>CHIRPS Layer
+                                                <input id="chirps" type="checkbox"/>
+                                            </p>
+
+                                            <div id="opacitySlider_chirps">
+                                                <label>Opacity for CHIRPS:</label>
+                                                <input id="opacity_chirps" type="range" value="contrast" max="0.5"
+                                                       min="0" step="0.1"/>
+                                            </div>
+                                            <p>ESI Layer
+                                                <input id="esi" type="checkbox"/>
+                                            </p>
+
+                                            <div id="opacitySlider_esi">
+                                                <label>Opacity for ESI:</label>
+                                                <input id="opacity_esi" type="range" value="contrast" max="0.5" min="0"
+                                                       step="0.1"/>
+                                            </div>
                                         </div>
-                                        <p>ESI Layer
-                                            <input id="esi" type="checkbox"/>
-                                        </p>
-
-                                        <div id="opacitySlider_esi">
-                                             <label>Opacity for ESI:</label>
-                                             <input id="opacity_esi" type="range" value="contrast" max="0.5" min="0" step="0.1"/>
-                                        </div>
-{#                                        <button id="save_settings">Save</button>#}
+                                        <div class="tab-pane fade" id="basemaps_tab" role="tabpanel"
+                                             aria-labelledby="basemaps-tab"></div>
+                                        <div class="tab-pane fade" id="legends_tab" role="tabpanel"
+                                             aria-labelledby="legends-tab"></div>
                                     </div>
-
-                                    <script src="{% static 'js/map_fixedsize.js' %}"></script>
                                 </div>
+                                <script src="{% static 'js/map_fixedsize.js' %}"></script>
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-lg-12 mb-4">
-                            <div class="card shadow mb-4">
-                                <div class="card-header py-3">
-                                    <h6 class="m-0 font-weight-bold text-primary">About WMS</h6>
-                                </div>
-                                <div class="card-body">
-                                    <div class="text-left text-dark">
-                                        WMS stands for web map services. This is one very common mechanism to 
-                                        show geospatial content. It is a standard recongized by the Open Geospatial Consortium.
-                                        <hr>
-                                        Usually, you can find WMS services from government agencies, universities, and other entities.
-                                        WMS services are usually free to use. WMS services can be produced by a variety of software,
-                                        the most common are ArcGIS for Server, GeoServer, and THREDDS.
-                                        <hr>
-                                        Web applications use common JS libraries such as Leaflet, OpenLayers and others to display WMS content.
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-12 mb-4">
-                            <div class="card shadow mb-4">
-                                <div class="card-header py-3">
-                                    <h6 class="m-0 font-weight-bold text-primary">Modifying this page</h6>
-                                </div>
-                                <div class="card-body">
-                                    <div class="text-left text-dark">
-                                        <ul>
-                                        <li><strong>templates/WebApp/map_fixedsize.html</strong> contains the HTML code to modify 
-                                        the text and graphics in this page.</li>
-                                        <li><strong>staticfiles/js/map1.js</strong> controls the behavior of the map.</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
+                <div class="row">
+                    <div class="col-lg-12 mb-4">
+                        <div class="card shadow mb-4">
+                            <div class="card-header py-3">
+                                <h6 class="m-0 font-weight-bold text-primary">About WMS</h6>
+                            </div>
+                            <div class="card-body">
+                                <div class="text-left text-dark">
+                                    WMS stands for web map services. This is one very common mechanism to
+                                    show geospatial content. It is a standard recongized by the Open Geospatial
+                                    Consortium.
+                                    <hr>
+                                    Usually, you can find WMS services from government agencies, universities, and other
+                                    entities.
+                                    WMS services are usually free to use. WMS services can be produced by a variety of
+                                    software,
+                                    the most common are ArcGIS for Server, GeoServer, and THREDDS.
+                                    <hr>
+                                    Web applications use common JS libraries such as Leaflet, OpenLayers and others to
+                                    display WMS content.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12 mb-4">
+                        <div class="card shadow mb-4">
+                            <div class="card-header py-3">
+                                <h6 class="m-0 font-weight-bold text-primary">Modifying this page</h6>
+                            </div>
+                            <div class="card-body">
+                                <div class="text-left text-dark">
+                                    <ul>
+                                        <li><strong>templates/WebApp/map_fixedsize.html</strong> contains the HTML code
+                                            to modify
+                                            the text and graphics in this page.
+                                        </li>
+                                        <li><strong>staticfiles/js/map1.js</strong> controls the behavior of the map.
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
+</div>
 </body>
 </html>
