Edits to "modify this page" sections and data model update form
Edits to "modify this page" sections and data model update form

--- a/templates/WebApp/about.html
+++ b/templates/WebApp/about.html
@@ -112,9 +112,11 @@
                                     <h6 class="m-0 font-weight-bold text-primary">Modifying this page</h6>
                                 </div>
                                 <div class="card-body">
-                                    <div class="text-left text-dark">
+                                    <div class="alert alert-info">
                                         <strong>templates/WebApp/about.html</strong> contains the HTML code to modify 
                                         the text and graphics in this page.
+                                        <br>
+                                        The code for this application is available <a href="https://github.com/SERVIR/AppTemplate2022">here</a>
                                     </div>
                                 </div>
                             </div>
