--- a/templates/WebApp/map_fixedsize.html
+++ b/templates/WebApp/map_fixedsize.html
@@ -113,11 +113,13 @@
                                     <h6 class="m-0 font-weight-bold text-primary">Modifying this page</h6>
                                 </div>
                                 <div class="card-body">
-                                    <div class="text-left text-dark">
+                                    <div class="alert alert-info">
                                         <ul>
                                         <li><strong>templates/WebApp/map_fixedsize.html</strong> contains the HTML code to modify 
                                         the text and graphics in this page.</li>
                                         <li><strong>staticfiles/js/map1.js</strong> controls the behavior of the map.</li>
+                                        <br>
+                                        The code for this application is available <a href="https://github.com/SERVIR/AppTemplate2022">here</a>
                                         </ul>
                                     </div>
                                 </div>
