modify page card update

--- a/templates/WebApp/about.html
+++ b/templates/WebApp/about.html
@@ -112,7 +112,7 @@
                                     <h6 class="m-0 font-weight-bold text-primary">Modifying this page</h6>
                                 </div>
                                 <div class="card-body">
-                                    <div class="text-left text-dark">
+                                    <div class="text-left text-dark alert alert-info">
                                         <strong>templates/WebApp/about.html</strong> contains the HTML code to modify 
                                         the text and graphics in this page.
                                     </div>
