--- a/templates/WebApp/home.html
+++ b/templates/WebApp/home.html
@@ -226,7 +226,7 @@ This template app is created and maintanined by the SERVIR Science Coordination 
                                         <h6 class="m-0 font-weight-bold text-primary">Modifying this page</h6>
                                     </div>
                                     <div class="card-body">
-                                        <div class="text-left text-dark">
+                                        <div class="text-left text-dark alert alert-info">
                                             <strong>templates/WebApp/home.html</strong> contains the HTML code to modify
                                             the text and graphics in this page.
                                         </div>
