--- a/templates/WebApp/map_fixedsize.html
+++ b/templates/WebApp/map_fixedsize.html
@@ -141,7 +141,7 @@
                                 <h6 class="m-0 font-weight-bold text-primary">Modifying this page</h6>
                             </div>
                             <div class="card-body">
-                                <div class="text-left text-dark">
+                                <div class="text-left text-dark alert alert-info">
                                     <ul>
                                         <li><strong>templates/WebApp/map_fixedsize.html</strong> contains the HTML code
                                             to modify
