--- a/templates/WebApp/map_from_GEE.html
+++ b/templates/WebApp/map_from_GEE.html
@@ -104,7 +104,7 @@
                                     <h6 class="m-0 font-weight-bold text-primary">Modifying this page</h6>
                                 </div>
                                 <div class="card-body">
-                                    <div class="text-left text-dark">
+                                    <div class="text-left text-dark alert alert-info">
                                         <ul>
                                         <li><strong>templates/WebApp/map_from_GEE.html</strong> contains the HTML code to modify 
                                         the text and graphics in this page.</li>
